--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,21 @@
-[package]
-name = "parasite"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [workspace]
+members = ["crates/parasite-core"]
+resolver = "2"
 
-members = ["crates/parasite-core", "crates/parasite-macros"]
+# [package]
+# name = "parasite"
+# version = "0.1.0"
+# edition = "2021"
 
-[dependencies]
-syn = { version = "2.0", features = ["full"] }
-quote = "1.0"
-proc-macro2 = "1.0"
-sum = "0.1.7"
-logos = "0.13.0"
-kinded = "0.3.0"
+# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-proc-macro = true
+# [dependencies]
+# syn = { version = "2.0", features = ["full"] }
+# quote = "1.0"
+# proc-macro2 = "1.0"
+# sum = "0.1.7"
+# logos = "0.13.0"
+# kinded = "0.3.0"
+
+# [lib]
+# proc-macro = true
