--- a/crates/parasite-core/Cargo.toml
+++ b/crates/parasite-core/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 thiserror = "1.0"
+chumsky = { version = "0.9.3", optional = true }
+
+[features]
+default = []
+combinator = ["chumsky"]
