--- a/crates/parasite-macros/Cargo.toml
+++ b/crates/parasite-macros/Cargo.toml
@@ -10,7 +10,7 @@ proc-macro = true
 
 
 [dependencies]
-syn = { version = "2.0", features = ["full"] }
+syn = { version = "2.0", features = ["full", "extra-traits"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 parasite-core = { path = "../parasite-core" }
