--- a/crates/parasite-core/Cargo.toml
+++ b/crates/parasite-core/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0"
 chumsky = { version = "0.9.3", optional = true }
+anymap3 = { version = "1.0.0", optional = true }
 
 [features]
-default = ["chumsky"]
+default = ["chumsky", "anymap3"]
