--- a/crates/parasite-core/Cargo.toml
+++ b/crates/parasite-core/Cargo.toml
@@ -7,8 +7,5 @@ edition = "2021"
 
 [dependencies]
 thiserror = "1.0"
-chumsky = { version = "0.9.3", optional = true }
-anymap3 = { version = "1.0.0", optional = true }
-
-[features]
-default = ["chumsky", "anymap3"]
+ecow = "0.2.3"
+owo-colors = "4.1.0"
